--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <div class="container">
         <div class="filter">
             <h1>Filter by:</h1>
-    <h1 class="diningtable"> 101</h1>
-    <h1 class="coffeetable"> 102</h1>
-    <h1 class="consoletable"> 103</h1>
+    <h1 class="diningtable"> 101: Diningtable</h1>
+    <h1 class="coffeetable"> 102: Coffeetable</h1>
+    <h1 class="reset"> Reset</h1>
         </div>
 
     
